add post put and delete
