# module/note/src/Application/Controller/Api/NoteCreateAction.php
@@ -1,0 +1,114 @@
+<?php
+
+/**
+ * Copyright © Bold Brand Commerce Sp. z o.o. All rights reserved.
+ * See LICENSE.txt for license details.
+ */
+
+declare(strict_types = 1);
+
+namespace Ergonode\Note\Application\Controller\Api;
+
+use Ergonode\Account\Domain\Entity\UserId;
+use Ergonode\Api\Application\Exception\FormValidationHttpException;
+use Ergonode\Api\Application\Response\CreatedResponse;
+use Ergonode\Note\Application\Form\CreateNoteForm;
+use Ergonode\Note\Application\Form\Model\CreateNoteFormModel;
+use Ergonode\Note\Domain\Command\CreateNoteCommand;
+use Ramsey\Uuid\Uuid;
+use Swagger\Annotations as SWG;
+use Symfony\Component\Form\FormFactoryInterface;
+use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\HttpFoundation\Response;
+use Symfony\Component\HttpKernel\Exception\BadRequestHttpException;
+use Symfony\Component\Messenger\MessageBusInterface;
+use Symfony\Component\PropertyAccess\Exception\InvalidPropertyPathException;
+use Symfony\Component\Routing\Annotation\Route;
+
+/**
+ * @Route("/notes", methods={"POST"})
+ */
+class NoteCreateAction
+{
+    /**
+     * @var MessageBusInterface
+     */
+    private $messageBus;
+
+    /**
+     * @var FormFactoryInterface
+     */
+    private $formFactory;
+
+    /**
+     * @param MessageBusInterface  $messageBus
+     * @param FormFactoryInterface $formFactory
+     */
+    public function __construct(
+        MessageBusInterface $messageBus,
+        FormFactoryInterface $formFactory
+    ) {
+        $this->messageBus = $messageBus;
+        $this->formFactory = $formFactory;
+    }
+
+    /**
+     * @SWG\Tag(name="Note")
+     *
+     * @SWG\Parameter(
+     *     name="language",
+     *     in="path",
+     *     type="string",
+     *     required=true,
+     *     default="EN",
+     *     description="Language Code",
+     * )
+     * @SWG\Parameter(
+     *     name="body",
+     *     in="body",
+     *     description="Note body",
+     *     required=true,
+     *     @SWG\Schema(ref="#/definitions/note")
+     * )
+     * @SWG\Response(
+     *     response=201,
+     *     description="Create note",
+     * )
+     * @SWG\Response(
+     *     response=400,
+     *     description="Validation error",
+     *     @SWG\Schema(ref="#/definitions/validation_error_response")
+     * )
+     *
+     * @param Request $request
+     *
+     * @return Response
+     *
+     * @throws \Exception
+     */
+    public function __invoke(Request $request): Response
+    {
+        try {
+            $model = new CreateNoteFormModel();
+            $form = $this->formFactory->create(CreateNoteForm::class, $model);
+            $form->handleRequest($request);
+
+            if ($form->isSubmitted() && $form->isValid()) {
+                /** @var CreateNoteFormModel $data */
+                $data = $form->getData();
+                $command = new CreateNoteCommand(
+                    new UserId($data->authorId),
+                    Uuid::fromString($data->objectId),
+                    $data->content
+                );
+                $this->messageBus->dispatch($command);
+
+                return new CreatedResponse($command->getId());
+            }
+        } catch (InvalidPropertyPathException $exception) {
+            throw new BadRequestHttpException('Invalid JSON format');
+        }
+
+        throw new FormValidationHttpException($form);
+    }
+}
